# bevy-cellular-automata

./: Cargo.toml
src/: camera.rs  camera_control.rs  cell.rs  control.rs  custom_app.rs  diagnostic.rs  input.rs  main.rs  render.rs  world_grid.rs
src/input/: mouse.rs
