[package]
name = "cellular-automata"
version = "0.1.0"
edition = "2024"

[profile]
dev.opt-level = 1
dev.package."*".opt-level = 3
release.lto = true
# release.codegen-units = 1

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy.git", branch = "main", features = [
    "dynamic_linking",
    "trace",
] }
# bevy = { version = "*", features = ["dynamic_linking", "trace"] }
avian2d = { version = "*", features = ["simd"] }
rand = "*"
